@@ -42,3 +42,4 @@ Yoann Le Bihan: Solaris patches
 Andreas Xenos: MacOSX patches and Parallels support
 Francois Laupetre: LVM modules
 Christophe Borivant
+Viper233: patch monitor edid
