@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * Multiples monitors patch added
        * Fix bug #1023670
        * New version of Gentoo.pm 
        * New Backend/Virtualization/Parallels.pm module for Parallels virtual machines inventory
